Update pom to permit illegal access. also remove add-opens