@@ -375,7 +375,7 @@
             <runOrder>alphabetical</runOrder>
             <rerunFailingTestsCount>2</rerunFailingTestsCount>
             <argline>-Xms1g -Xmx4g -XX:MaxMetaspaceSize=512m</argline>
-            <argline>--add-opens ds/ds=ALL-UNNAMED</argline>
+            <argline>--illegal-access=permit</argline>
             <includes>
               <include>**/*Test.java</include>
             </includes>
